[package]
name = "laron-wallet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Ade M Ramdani <curiousdev04@gmail.com>"]
description = "Ethereum wallet library"
readme = "README.md"
keywords = ["crypto", "ethereum", "keccak"]
repository = "https://github.com/laron-tech/laron-wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sha2 = "0.10.6"
pbkdf2 = "0.11.0"
hmac = "0.12.1"
unicode-normalization = "0.1"

[features]
chinese_simplified = []
chinese_traditional = []
czech = []
english = []
french = []
italian = []
japanese = []
korean = []
spanish = []

all = ["chinese_simplified", "chinese_traditional", "czech", "french", "italian", "japanese", "korean", "spanish"]
