[package]
name = "laron-wallet"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Ade M Ramdani <curiousdev04@gmail.com>"]
description = "Ethereum wallet library"
readme = "README.md"
keywords = ["crypto", "ethereum", "keccak", "bip32", "bip39"]
repository = "https://github.com/laron-tech/laron-wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
chinese_simplified = []
chinese_traditional = []
czech = []
english = []
french = []
italian = []
japanese = []
korean = []
portuguese = []
spanish = []

all = [
  "chinese_simplified",
  "chinese_traditional",
  "czech",
  "french",
  "italian",
  "japanese",
  "korean",
  "portuguese",
  "spanish",
]

[dependencies]
rand = "0.8.4"
sha2 = "0.10.6"
pbkdf2 = "0.11.0"
hmac = "0.12.1"
unicode-normalization = "0.1"
laron-crypto = "0.1"
ripemd = "0.1.3"
hex = "0.4"
horror = "0.1"
